fix typo in explaining outputs post

--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -39,7 +39,7 @@ So we automatically get interactive explanations for arbitrary outputs of any co
 
 Before going too far, let's specify the problem we would like to solve. Imagine we have an input collection, a computation, and a corresponding output collection. For any subset of the output domain, we want to identify a subset of the input collection whose output under the computation agrees with the actual output, on the specified subset. This was a bit wordy, because we want to be able to explain not only output records, but the *absence* of output records. For some set of records that may or may not exist, we want a subset of the input that faithfully reproduces what actually happened for those records. Even if this means *preventing* some records from being produced.
 
-We know there is at least one solution to this problem: the entire input collection itself reproduces the entire output collection. However, we are interested in more concise explanations, and will work towards minimizing the amount of input we actually need. This is one place where differential dataflow helps out a great deal: naïve adaptations of existing work can result in enormous explanations. Even differential dataflow can provide large explanations, and we will need to introduce some "optimizations" to streamline the explanations. For example, we may just want *one* path between two nodes, rather than all paths, or ever "all shortest paths".
+We know there is at least one solution to this problem: the entire input collection itself reproduces the entire output collection. However, we are interested in more concise explanations, and will work towards minimizing the amount of input we actually need. This is one place where differential dataflow helps out a great deal: naïve adaptations of existing work can result in enormous explanations. Even differential dataflow can provide large explanations, and we will need to introduce some "optimizations" to streamline the explanations. For example, we may just want *one* path between two nodes, rather than all paths, or even "all shortest paths".
 
 We promised interactive updates to explanations for interactively update computations, so let's clear that up now.
 
