how many secrets

--- a/posts/2017-02-08.md
+++ b/posts/2017-02-08.md
@@ -48,10 +48,10 @@ The problem here is that, even with just one voter in the dataset (you, say), th
 
 ### Conclusions?
 
-If (`eps`, `del`)-differential privacy folks care about this sort of example, it means that we need better guidance on how to chose `del`. At the least (most?), we must pick `del` to be vanishingly small with respect to one over the size of the domain of input records. If there are 1,000,000 names you might write down, we need `del` to be much smaller than 1/1,000,000. Otherwise, we risk guaranteeing disclosure of one of the secrets of the form "your data was not X". Intuitively, it feels to me like it doesn't need to be smaller than that, for reasons that I can't back up right now, but it needs to be at least that small.
+If (`eps`, `del`)-differential privacy folks care about this sort of example, it means that we need better guidance on how to chose `del`. At the least (most?), we must pick `del` to be vanishingly small with respect to one over the size of the domain of input records. If there are 1,000,000 names you might write down, we need `del` to be much smaller than 1/1,000,000. Otherwise, we risk guaranteeing disclosure of one of the secrets of the form "your data was not X". (Intuitively, it feels like `del` doesn't need to be much smaller than that, though).
 
 So how large are common domains of input records? If we have a database of just bits, the domain is quite small: two! On the other hand, if we have a database of "strings people typed into Google", it .. well there really isn't a reasonable bound is there? Of course you can make something up, but let's agree that you are just making something up. How many web searches might you want to pretend you've done (e.g. when reviewer #2 is flabbergasted that you didn't)? How many distinct geo-locations might you want to pretend to have visited (e.g. when you've told your boss or spouse you've literally looked everywhere)? How many things don't you want people to know aren't true about your health, your finances, your private life?
 
 You could ask "are the only bad examples about liars?" Maybe. Although, we could change the lottery example to have no secret payments and deals, but instead when the person is named and realizes you didn't save them (but could have), they 100% burn your house down. This is appreciably different from the (`eps`, `0`)-dp mechanism where you can always hug the winner with teary eyes and say "I tried", and then go chill in your comfy house. One mechanism gives you plausible deniability and one absolutely does not.
 
-So, (`eps`, `del`)-differential privacy is a bit weirder than I think most people give it credit for. I'm still not comfortable with it, nor with the fact that so many other people seem to be quite comfortable.
+So, (`eps`, `del`)-differential privacy is a bit weirder than I think most people give it credit for. I'm still not comfortable with it, nor with the fact that so many other people seem to be as comfortable as they are.
