--- a/posts/2017-02-08.md
+++ b/posts/2017-02-08.md
@@ -16,13 +16,15 @@ The original formulation of differential privacy used `del = 0`, meaning there w
 
 The extension to non-zero `del` happened so that one could analyze mechanisms that were mostly differentially private, but could occasionally screw up and do something unpleasant. Ideally `del` should be really small, but "just how small?" wasn't something that people thought very hard about.
 
-One opinion is that `del` should be much small than one over the number of people in the input dataset, because otherwise the mechanism that randomly releases a record in the dataset would be (`0`, `del`)-differentially private. Of course, we aren't excited about that mechanism, because it guarantees a privacy violation. Disappointingly, I think this rule-of-thumb stuck mostly because folks thought about this one attack, and for some reason believed that defeating it was sufficient.
+One opinion is that `del` should be much smaller than one over the number of people in the input dataset, because otherwise the mechanism that randomly releases a record in the dataset would be (`0`, `del`)-differentially private. Of course, we aren't excited about that mechanism, because it guarantees a privacy violation. Disappointingly, I think this rule-of-thumb stuck mostly because folks thought about this one attack, and for some reason believed that defeating it was sufficient.
 
 I don't think that choosing `del` based on the number of people in the dataset is the right approach. I'm going to try and argue this by constructing a mechanism with good (eps, del) guarantees, but which always releases concrete information about all participants.
 
 ---
 
 **Aside**: I don't like privacy guarantees that depends on the number of people in the dataset; there could be more people than you expected, or fewer. Consider the mechanism that hashes each record in the dataset, and if all hashes are the same publishes the input dataset. Theoretically, it seems very unlikely that this mechanism would ever release the dataset (`del` ~ 1/256^|data|, say), but would you want to be the *first* person to contribute your data?
+
+---
 
 ### The Lottery
 
@@ -42,7 +44,7 @@ The first mechanism has pure differential privacy, and no one can really tell mu
 
 Let's imagine before the lottery that you went to each member of the population and said "I'm a voter, and if you give me $1,000 I'll protect you". That's pretty scummy, because of course you can't do that for everyone, but your scumminess isn't the issue here. You pulled in a bunch of money, and have each person in the town independently thinking you will save them. You then write your own name down, because you've been told differential privacy will protect your data (and, because you are scummy).
 
-The second mechanism, 100% of the time, guarantees that someone is going to be pissed at you. We don't learn what data you contributed (or even if you contributed anything), but we always learn something concrete about your data. We always get incontrovertible evidence of some value that your data *wasn't*. You will probably have to give the "winner" their $1,000 back. This isn't a problem that pure differential privacy has.
+The second mechanism, 100% of the time, guarantees that someone is going to be pissed at you. We don't learn what data you contributed (or even if you contributed anything), but we always learn something concrete about your data. We always get incontrovertible evidence of some value that your data *wasn't*. You will probably even have to give the winner their $1,000 back. This isn't a problem that pure differential privacy has.
 
 The problem here is that, even with just one voter in the dataset (you, say), that person can have an arbitrarily large number of secrets. Here the voter has as many secrets as there are people in the population, each of the form "my data isn't actually your name". Perhaps you think that these are lame secrets, but you then enter the murky territory of valuating other people's secrets. How many secrets worth protecting can a person have? I have no clue, nor I suspect do most folks using (`eps`, `del`)-differential privacy. 
 
@@ -52,6 +54,6 @@ If (`eps`, `del`)-differential privacy folks care about this sort of example, it
 
 So how large are common domains of input records? If we have a database of just bits, the domain is quite small: two! On the other hand, if we have a database of "strings people typed into Google", it .. well there really isn't a reasonable bound is there? Of course you can make something up, but let's agree that you are just making something up. How many web searches might you want to pretend you've done (e.g. when reviewer #2 is flabbergasted that you didn't)? How many distinct geo-locations might you want to pretend to have visited (e.g. when you've told your boss or spouse you've literally looked everywhere)? How many things don't you want people to know aren't true about your health, your finances, your private life?
 
-You could ask "are the only bad examples about liars?" Maybe. Although, we could change the lottery example to have no secret payments and deals, but instead when the person is named and realizes you didn't save them (but could have), they 100% burn your house down. This is appreciably different from the (`eps`, `0`)-dp mechanism where you can always hug the winner with teary eyes and say "I tried", and then go chill in your comfy house. One mechanism gives you plausible deniability and one absolutely does not.
+You could ask "are the only bad examples about liars?" Maybe. Although, we could change the lottery example to have no secret payments and deals, but instead when the person is named and realizes you could have saved them but didn't, they 100% burn your house down. This is appreciably different from the (`eps`, `0`)-dp mechanism where you can always hug the winner with teary eyes and say "I tried", and then go chill in your comfy house. One mechanism gives you plausible deniability and one absolutely does not.
 
 So, (`eps`, `del`)-differential privacy is a bit weirder than I think most people give it credit for. I'm still not comfortable with it, nor with the fact that so many other people seem to be as comfortable as they are.
