typo in filenames

--- a/posts/2017-02-21.md
+++ b/posts/2017-02-21.md
@@ -15,7 +15,7 @@ Strongly connected components is one computation I run a lot. Because it is cool
 
 But you fire up a 10M node, 20M edge computation, you get a profile that looks a bit like this
 
-![scc](https://github.com/frankmcsherry/blog/blob/master/assets/tries/scc.pnf)
+![scc](https://github.com/frankmcsherry/blog/blob/master/assets/tries/scc.png)
 
 What it is telling, because serious what the heck, is that we are spending a lot of time (20%) futzing around with memory management (`memmove`) and lots of time in methods called things like `done` and `extend` and `consolidate`. These are all methods related to building up collections, which makes sense because the `scc` computation produces a bunch of intermediate state (it is a really cool dataflow) but doesn't do much with it (one iteration is often enough). 
 
@@ -23,7 +23,7 @@ But, building up collections is part of what is holding scc back.
 
 What about something else? Let's look at a continually updated breadth first search compuation. This is another reference computation; I'm going to do 1M nodes and 10M edges, and continually apply 1,000 edge updates to the computation.
 
-![bfs](https://github.com/frankmcsherry/blog/blob/master/assets/tries/bfs.pnf)
+![bfs](https://github.com/frankmcsherry/blog/blob/master/assets/tries/bfs.png)
 
 This time around we see we spend lots of time in `advance`, which we might not have met yet but will meet soon. There is also some `seek_key` and `tidy_vals`, both related to navigating around traces. This makes sense for bfs because there are relatively few updates as the edges change, but we do need to run around and check that things have stayed the same.
 
