--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -107,7 +107,7 @@ There might be a few other cool reasons. Each one is an opportunity for me to sc
 
 ### Making this happen
 
-What would it take to let us do this sort of transformation on iterative computations? Run batches of input changes concurrently, before we have finished all of the iterations of earlier batches? What black magic would we need to summon this po
+What would it take to let us do this sort of transformation on iterative computations? Run batches of input changes concurrently, before we have finished all of the iterations of earlier batches? What black magic would we need to summon this pow
 
 Actually, timely dataflow already does this.
 
@@ -133,7 +133,7 @@ Ok, ok. Let's remind ourselves about our reachability computation, which iterati
 Before we do anything, let's add one line after the `group`:
 
 ```rust
-	.inspect_batch(|t,_| println!("time: {:?}", t.inner))
+	.inspect_batch(|t,_| println!("time: {:?}", t))
 ```
 
 This is going to tell us each time we see a batch of data produced by the `group` operator (the "min" on depths), and at what logical time we see it. It should clue us in to how the computation is actually being executed.
@@ -175,7 +175,7 @@ Back to breadth-first search and depth computation. I'm going to run the computa
 
     cargo run --example bfs -- 100 100 1 10
 
-This produces a bunch of output times, each of the form `(Root, round), iteration)`:
+This produces a bunch of output times, each of the form `((Root, round), iteration)`:
 
 	time: ((Root, 0), 0)
 	time: ((Root, 0), 1)
@@ -241,13 +241,13 @@ This version of the code just dumps all the data in, and only once it is done do
 
 Chew on that for a bit.
 
-Actually, I think this all makes a lot of sense if you ignore the `(9,1)` for the moment. If you ignore that time, all of the other updates are done in iteration order. Timely and differential agree that we can do all of the iteration `2`, `3`, `4`, and `5` work at the same time, even before all work at prior round have completed.
+Actually, I think this all makes a lot of sense if you ignore the `(9,1)` for the moment. If you ignore that time, all of the other updates are done in iteration order. Timely and differential agree that we can do the work for each of the iteration `2`, `3`, `4`, and `5` at the same time, even before all work at prior rounds have completed.
 
-The `(9,1)` update is a bit of a mystery, but nothing about differential dataflow's operator implementation guarantees that all work that can be performed will be performed immediately. In particular, there are several points where the operator learns it will need to do some more work, and enqueues the work rather than testing whether the work can be done right away. The apparent `(9,1)` disorder may just be a result of this. 
+The `(9,1)` update is a bit of a mystery, but nothing about differential dataflow's operator implementation guarantees that all work that can be performed will be performed *immediately*. In particular, there are several points where the operator learns it will need to do some more work, and enqueues the work rather than testing whether the work can be done right away. The apparent `(9,1)` disorder may just be a result of this. It's not an incorrect disorder, just work we could have done before `(0,2)` and `(5,2)` if we wanted to.
 
 #### Way 3: A little bit of both
 
-We could also a bit of both: ingest some data, do some computation, ingest some data, do some computation. This is a lot more like what we actually expect in a streaming system. Taking all the timestamped input at once is more like a temporal database (as I understand them), and taking the timestamped input only one update at a time is like .. a bad streaming system (hi!).
+We could also do a bit of both: ingest some data, do some computation, ingest some data, do some computation. This is a lot more like what we actually expect in a streaming system. Taking all the timestamped input at once is more like a temporal database (as I understand them), and taking the timestamped input only one update at a time is like .. a bad streaming system I guess.
 
 So let's do that, doing a few rounds (three) of computation after each update, but not necessarily running until all updates for the round are complete. What do we see:
 
