--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -365,3 +365,67 @@ Related, we will evenutally want to meld high- and low-resolution trace represen
 All in all, I think there are some great things to try out here, many likely pitfalls, but some fairly cool potential. I'm optimistic that we will soon get to a system that processes updates with high-resolution *and* high-throughput, for as long as you run the system. 
 
 It will probably be slower on some batch graph compute, but are people really still working on that stuff?
+
+### Addendum: A Prototype (March 5, 2017)
+
+I have a prototype up and running. It seems to produce the correct output, in the sense that it produces exactly the same outputs whether you run it with one update at a time, or one million updates at a time. Also, the output isn't empty; I though to check that.
+
+First up, let's look at some measurements from the previous pile of code. This pile is designed to take batches of records which all have the same time. This means that if you want each update to have its own timestamp, you get lots of small batches. If you put multiple updates together in a batch, they all have the same timestamp and their effects can't be distinguished.
+
+Using this implementation, let's get some baseline measurements. We are going to look at doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, 100,000 times). All updates in a batch have the same timestamp.
+
+|  experiment | 1k / 2k | 1m / 10m |
+|------------:|--------:|---------:|
+| 1 x 1000000 |    142s |     100s | 
+| 10 x 100000 |     73s |      64s |
+| 100 x 10000 |     27s |      51s |
+| 1000 x 1000 |      5s |      48s |
+| 10000 x 100 |       - |      34s |
+| 100000 x 10 |       - |      21s |
+| 1000000 x 1 |       - |      12s |
+
+We don't have measurements for 10,000 and larger batch sizes for the small graph, because with only 2,000 edges and the same timestamp for all the updates, most of the changes would just cancel. I should say, although it is trivial for the `1k / 2k` graph, the `1m / 10m` graph takes about eight seconds to load its ten million edges, and these numbers include that.
+
+Notice the massive discrepancy between single-element batches (142s and 100s) and the larger batches (5s and 12s). This is a pretty substantial throughput difference. We would love to get that throughput, or something close to it, while keeping the resolution of single-element updates.
+
+#### The prototype
+
+There is some prototype code! Yay! It is *pretty weird* code, not like much I've written before. I'm quite certain there are inefficiencies in it, so the absolute numbers are just and indication that we are moving in the right direction. These are the same experiments as above, except here *every update has a distinct timestamp*. We are producing the output that corresponds to the `1 x 1000000` row from above, but without shattering all the updates into different batches.
+
+|  experiment | 1k / 2k | 1m / 10m |
+|------------:|--------:|---------:|
+| 1 x 1000000 |       - |        - | 
+| 10 x 100000 |    237s |      94s |
+| 100 x 10000 |    173s |      75s |
+| 1000 x 1000 |    148s |      57s |
+| 10000 x 100 |    623s |      43s |
+| 100000 x 10 |       - |      31s |
+| 1000000 x 1 |       - |      25s |
+
+There are several things different about this chart. 
+
+1. First up, you may notice we didn't do a batch size 1 row. There are some things we do assuming there will be lots of work, and when there isn't lots of work we do it anyhow; this will probably be fixed. These same issues end up hurting the small graph more than the large graph; the small graph is sparser, and updates cause longer cascades of small updates. 
+
+2. We have a `10000 x 100` entry for the smaller graph! It makes sense to run the experiment now, because each update with a different time doesn't result in cancelation. Unfortunately, it is terrible. The reason here seems to be the same reason we had to do that [compaction](https://github.com/frankmcsherry/blog/blob/master/posts/2017-02-11.md) stuff: with so many updates, each of the 1,000 keys gets a sizeable history, and within a batch we are trying to process all of it without compacting it. The good news is that we should be to do compaction on our own. The bad news is that I have to code that up.
+
+3. The `1m / 10m` column doesn't look so bad, does it? The times are worse than before, for sure, but not by all that much. They are roughly "one batch size worse", I think. And the results tell us the exact consequences of each individual update, corresponding to the `1 x 1000000` row up above. I think these could also get a bit better, because there are some fairly feeble moments in the code.
+
+Let's take the `1m / 10m` experiment and crank up the number of workers. Note: we are still producing the high-resolution outputs.
+
+|  experiment | 1 worker | 2 workers |
+|------------:|---------:|----------:|
+| 1 x 1000000 |        - |         - |
+| 10 x 100000 |      94s |       82s |
+| 100 x 10000 |      75s |       58s |
+| 1000 x 1000 |      57s |       39s |
+| 10000 x 100 |      43s |       28s |
+| 100000 x 10 |      31s |       20s |
+| 1000000 x 1 |      25s |       15s |
+
+Here, one worker takes 8s before it starts processing updates, and two workers take 5s before they start processing updates. These numbers include those two (and look a bit better if you mentally subtract that out).
+
+This is pretty good news, I think. For small batches the second worker doesn't help much, which is what we should expect; the high-resolution changes don't improve the performance of small batches, they make larger batches produce the same output. The larger batches do get a decent benefit from additional workers; the scaling isn't 2x, and it probably shouldn't be (we have to do data exchange, and flail around with some buffers).
+
+This looks pretty promising to me. We can get the output that used to take us 92s (100s - 8s) now in just 10s to 15s. Or, maybe 23s if we want sub-second response time. See, we need to take the total time and divide by the number of batches to get the average response time, and we only get 1m updates / 10s throughput if we want to wait for 10s. In fact, if that is our strategy there are going to be some updates that take 20s before we see their implications. We'd really like to draw down the numbers for the medium batch sizes.
+
+There are for sure things to improve in the code, and I hope and expect these numbers to come down. I'm also worried about (and planning on fixing) the numbers for the smaller graph, which I'd very much like to work hitch-free. In particular, I'd love to have an "idiot-proof" implementation that just works for any reasonable problem, without careful caveats about settings of batch sizes and the like. Watch this space!
