--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -372,7 +372,7 @@ I have a prototype up and running. It seems to produce the correct output, in th
 
 First up, let's look at some measurements from the previous pile of code. This pile is designed to take batches of records which all have the same time. This means that if you want each update to have its own timestamp, you get lots of small batches. If you put multiple updates together in a batch, they all have the same timestamp and their effects can't be distinguished.
 
-Using this implementation, let's get some baseline measurements. We are going to look at doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, 100,000 times). All updates in a batch have the same timestamp.
+Using this implementation, let's get some baseline measurements. We are going to look at doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, done 100,000 times). All updates in a batch have the same timestamp.
 
 |  experiment | 1k / 2k | 1m / 10m |
 |------------:|--------:|---------:|
@@ -384,13 +384,13 @@ Using this implementation, let's get some baseline measurements. We are going to
 | 100000 x 10 |       - |      21s |
 | 1000000 x 1 |       - |      12s |
 
-We don't have measurements for 10,000 and larger batch sizes for the small graph, because with only 2,000 edges and the same timestamp for all the updates, most of the changes would just cancel. I should say, although it is trivial for the `1k / 2k` graph, the `1m / 10m` graph takes about eight seconds to load its ten million edges, and these numbers include that.
+We don't have measurements for 10,000 and larger batch sizes for the small graph, because with only 2,000 edges and the same timestamp for all the updates in a batch, most of the changes would just cancel. I should say, although it is trivial for the `1k / 2k` graph, the `1m / 10m` graph takes about eight seconds to load its ten million edges, and these numbers include that.
 
 Notice the massive discrepancy between single-element batches (142s and 100s) and the larger batches (5s and 12s). This is a pretty substantial throughput difference. We would love to get that throughput, or something close to it, while keeping the resolution of single-element updates.
 
 #### The prototype
 
-There is some prototype code! Yay! It is *pretty weird* code, not like much I've written before. I'm quite certain there are inefficiencies in it, so the absolute numbers are just and indication that we are moving in the right direction. These are the same experiments as above, except here *every update has a distinct timestamp*. We are producing the output that corresponds to the `1 x 1000000` row from above, but without shattering all the updates into different batches.
+There is some prototype code! Yay! It is *pretty weird* code, not like much I've written before. I'm quite certain there are inefficiencies in it, so the absolute numbers are just an indication that we are moving in the right direction. These are the same experiments as above, except here *every update has a distinct timestamp*. We are producing the output that corresponds to the `1 x 1000000` row from above, but without shattering all the updates into different batches.
 
 |  experiment | 1k / 2k | 1m / 10m |
 |------------:|--------:|---------:|
@@ -404,9 +404,9 @@ There is some prototype code! Yay! It is *pretty weird* code, not like much I've
 
 There are several things different about this chart. 
 
-1. First up, you may notice we didn't do a batch size 1 row. There are some things we do assuming there will be lots of work, and when there isn't lots of work we do it anyhow; this will probably be fixed. These same issues end up hurting the small graph more than the large graph; the small graph is sparser, and updates cause longer cascades of small updates. 
+1. First up, you may notice we didn't do a batch size 1 row. There are some things we do assuming there will be lots of work, and when there isn't lots of work we do it anyhow. The whole point of this work is to move to larger batches. That being said, this will probably be fixed. These same issues end up hurting the small graph more than the large graph; the small graph is sparser, and updates cause longer cascades of small updates. 
 
-2. We have a `10000 x 100` entry for the smaller graph! It makes sense to run the experiment now, because each update with a different time doesn't result in cancelation. Unfortunately, it is terrible. The reason here seems to be the same reason we had to do that [compaction](https://github.com/frankmcsherry/blog/blob/master/posts/2017-02-11.md) stuff: with so many updates, each of the 1,000 keys gets a sizeable history, and within a batch we are trying to process all of it without compacting it. The good news is that we should be to do compaction on our own. The bad news is that I have to code that up.
+2. We have a `10000 x 100` entry for the smaller graph! It makes sense to run the experiment now, because each update with a different time doesn't result in cancelation. Unfortunately, it is terrible. The reason here seems to be the same reason we had to do that [compaction](https://github.com/frankmcsherry/blog/blob/master/posts/2017-02-11.md) stuff: with so many updates, each of the 1,000 keys gets a sizeable history, and within a batch we are trying to process all of it without compacting it. The makes us go quadratic in the number of updates per key per batch. The good news is that we should be to do compaction on our own. The bad news is that I have to code that up.
 
 3. The `1m / 10m` column doesn't look so bad, does it? The times are worse than before, for sure, but not by all that much. They are roughly "one batch size worse", I think. And the results tell us the exact consequences of each individual update, corresponding to the `1 x 1000000` row up above. I think these could also get a bit better, because there are some fairly feeble moments in the code.
 
