--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -370,7 +370,7 @@ It will probably be slower on some batch graph compute, but are people really st
 
 I have a prototype up and running. It seems to produce the correct output, in the sense that it produces exactly the same outputs whether you run it with one update at a time, or one million updates at a time. Also, the output isn't empty; I thought to check that.
 
-First up, let's look at some measurements from the previous pile of code. This pile is designed to take batches of records which all have the same time. This means that if you want each update to have its own timestamp, you get lots of small batches. If you put multiple updates together in a batch, they all have the same timestamp and their effects can't be distinguished.
+First up, let's look at some measurements from the previous pile of code. This previous pile takes batches of records which all have the same time. This means that if you want each update to have its own timestamp, you get lots of small batches. If you put multiple updates together in a batch, they all have the same timestamp and their effects can't be distinguished.
 
 Using this implementation, let's get some baseline measurements. We are going to look at doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, done 100,000 times). All updates in a batch have the same timestamp.
 
