--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -372,7 +372,7 @@ I have a prototype up and running. It seems to produce the correct output, in th
 
 First up, let's look at some measurements from the previous pile of code. This previous pile takes batches of records which all have the same time. This means that if you want each update to have its own timestamp, you get lots of small batches. If you put multiple updates together in a batch, they all have the same timestamp and their effects can't be distinguished.
 
-Using this implementation, let's get some baseline measurements. We are going to look at the breadth-first search computation (how many nodes at each distance from the root) doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, done 100,000 times). All updates in a batch have the same timestamp.
+Using this implementation, let's get some baseline measurements. We are going to look at the breadth-first search computation (how many nodes are at each distance from the root) doing one million updates to two random graphs, one with 1,000 nodes and 2,000 edges, and one with 1,000,000 nodes and 10,000,000 edges. We will do the one million updates a few different ways, batching the updates in batches of sizes from one up to one million (e.g. `10 x 100000` means batches of size 10, done 100,000 times). All updates in a batch have the same timestamp.
 
 |  experiment | 1k / 2k | 1m / 10m |
 |------------:|--------:|---------:|
