--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -429,3 +429,25 @@ This is pretty good news, I think. For small batches the second worker doesn't h
 This looks pretty promising to me. We can get the output that used to take us 92s (100s - 8s) now in just 10s to 15s. Or, maybe 23s if we want sub-second response time. See, we need to take the total time and divide by the number of batches to get the average response time, and we only get 1m updates / 10s throughput if we want to wait for 10s. In fact, if that is our strategy there are going to be some updates that take 20s before we see their implications. We'd really like to draw down the numbers for the medium batch sizes.
 
 There are for sure things to improve in the code, and I hope and expect these numbers to come down. I'm also worried about (and planning on fixing) the numbers for the smaller graph, which I'd very much like to work hitch-free. In particular, I'd love to have an "idiot-proof" implementation that just works for any reasonable problem, without careful caveats about settings of batch sizes and the like. Watch this space!
+
+### Addendum: Small message optimization (March 7, 2017)
+
+One of the "things we do assuming there will be lots of work", alluded to above as a reason we might have poor performance on small batch sizes, is radix sort. As I've written it, there are 256 numbers to go and check each time you radix shuffle on a byte, because there are that many different bytes each record might have produced. You do this for each byte position of (in this case) an eight-byte key.
+
+If you just have 10 elements to sort, just call `.sort()`.
+
+I've done that now. The times have improved, generally. Old times are in parentheses: 
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 | 157s (237s) | 73s (94s) |    64s (82s) |
+| 100 x 10000 |  79s (173s) | 58s (75s) |    46s (58s) |
+| 1000 x 1000 |      (148s) | 53s (57s) |    36s (39s) |
+| 10000 x 100 |      (623s) | 41s (43s) |    28s (28s) |
+| 100000 x 10 |           - |     (31s) |        (20s) |
+| 1000000 x 1 |           - |     (25s) |        (15s) |
+
+Some measurements weren't re-taken, under the premise that they shouldn't be improved (and I'm getting dodgy numbers the more my laptop runs and heats up).
+
+The small instance still suffers from the second issue above: that the implementation's behavior is quadratic in the number of times per key in each batch. For the `10000 x 100` experiment, several keys have more than 100 times, resulting in 100x overhead that could be substantially reduced. I have a partial solution for that, but it is vexxingly hard to do some things with general partial orders that are so very, very simple for integers that just increase.
