--- a/posts/2017-03-22.md
+++ b/posts/2017-03-22.md
@@ -18,7 +18,7 @@ Our goal is to produce a corresponding stream of changes to the output, which sh
 
 	(val2, time, diff)
 
-indicates how and when the output experiences changes.
+and indicate how and when the output experiences changes.
 
 ### Totally ordered times
 
@@ -52,7 +52,9 @@ Correspondingly, we need to produce output updates
 
 	(val2, time, diff)
 
-so that the output collection always accumulates to the value resulting from `logic` applied to the accumulated input collection. 
+so that the output collection always accumulates to the value resulting from `logic` applied to the accumulated input collection. Again, it just works, except that if you try and picture it your brain will hurt.
+
+Both input and output updates are accumulated into collections using a time threshold `t`. We just add up all the differences for each of the values.
 
 #### "When" are updates with partially ordered times?
 
@@ -61,13 +63,13 @@ Totally ordered times had a very appealing and intuitive property: the output ca
 	("carrot", (1, 3), +1)
 	("turnip", (2, 2), +1)
 
-Each of these records has its count increased by one at two incomparable times: neither `(1, 3)` nor `(2, 2)` comes before the other. You might say: "this doesn't add up to *one* value" which is true and indeed I've oversimplified.
+Each of these records has its count increased by one at two incomparable times: neither `(1, 3)` nor `(2, 2)` comes before the other. You might say: "this doesn't add up to *one* value" which is true and indeed I've oversimplified (we actually have collection-valued inputs and outputs, but I wanted to simplify; oops).
 
 Something interesting happens at the time `(2, 3)`, which is the first time that includes both updates in its accumulation. This time doesn't appear in the input updates, but it is a time when the input collection changes. This wasn't a problem with totally ordered times, because "the first time that includes both updates" is just the later of the two times. Not here.
 
-There is a theorem that one can prove, which is that a collection can only change at a well-defined set of times: those defined by taking a subset of times at which its input changes and determining the first moment at which they all come into effect. This is called their `join`, and if you are math-y this means when I said "partial order" I really meant "join semi-lattice". 
+There is a theorem that one can prove, which is that a collection can only change at a well-defined set of times: those defined by taking a subset of times at which its input changes and determining the first moment at which all the updates come into effect. This is called the `join` of the associated times, and if you are math-y this means when I said "partial order" I really meant "join semi-lattice". This could probably be relaxed, but let's assume it for now.
 
-In the example above where we have pairs of numbers for times, this means we may have changes at any times that are the component-wise maximums of some set of input times.
+In the example above where we have pairs of numbers for times, this means we may have changes at any times that are the component-wise maximums of some set of input times. Thinking for a bit, this could be a lot larger than the number of input changes.
 
 ### Algorithms!
 
@@ -86,7 +88,7 @@ The main tricky thing we had to do here was go through the times in some order t
 
 That algorithm works, and is roughly how the kernel of differential dataflow behaves. However, there are several under-specified components, and the naive implementations aren't as fast as we want. 
 
-We would really like our implementations to be "linear" or nearly so, because our plan is to process unbounded changes to the input collection by repeatedly applying our solution to bounded chunks of input changes, and we'd like to benefit (or at least not suffer) from the flexbility of working on larger batches. If nothing else, it would seem that we could always fall back on execution on smaller chunks.
+We would really like our implementations to be "linear" or nearly so, because our plan is to process unbounded changes to the input collection by repeatedly applying our solution to bounded chunks of input changes, and we'd like to benefit (or at least not suffer) from the flexibility of working on larger batches. If nothing else, it would seem that we could always fall back on execution on smaller chunks.
 
 #### Determine all the times
 
@@ -142,9 +144,11 @@ Why are chains handy?
 
     Instead of taking time equal to the number of updates multiplied by the number of times to process, we take time proportional to the number of chains in the updates multiplied by the number of chains in the times to process. This could be just one when things are simple, and it smoothly degrades as they become less simply.
 
-2. **Determination**: We would similarly expect that chain decompositions would help us find the closure of a set of times. For sure, if the times are a single chain, totally ordered, then there is no work to do: a chain is already closed under join.
+2. **Determination**: We would similarly expect that chain decompositions would help us find the closure of a set of times. For sure, if the times are a single chain, totally ordered, then there is no work to do: a chain is already closed under join. 
 
-    Unfortunately, that's as far as I am at the moment. It seems like there could be a nice linear time algorithm when the number of chains is small, but I haven't found it quite yet. The problem is a little different, in that unlike the accumulation stage, the determination stage can actually produce quadratic (or more) output. We've allowed ourselves to take time in that case, but the structure of the algorithms appears fundamentally different; one can't always just swing through the chains and ignore the history (example `grid` forthcoming).
+    If we have more than one chain, as each are closed we can just take the product of various pairs of chains. We do not need to "re-close" any sets, which is a relief. Unfortunately, "the product of various pairs of chains" is already quadratic, even if the output isn't, and we don't want that.
+
+Unfortunately, that's as far as I am at the moment. It seems like there could be a nice linear time algorithm when the number of chains is small, but I haven't found it quite yet. The problem is a little different, in that unlike the accumulation stage, the determination stage can actually produce quadratic (or more) output. We've allowed ourselves to take time in that case, but the structure of the algorithms appears fundamentally different; one can't always just swing through the chains and ignore the history (example `grid` forthcoming).
 
 ### An elemental problem
 
